--- a/package.json
+++ b/package.json
@@ -2,13 +2,26 @@
   "name": "react-stretchy-header",
   "version": "0.0.0",
   "description": "A stretchy image-header for react, like that seen on ios",
-  "main": "index.js",
+  "main": "build/index.js",
   "scripts": {
     "test": "jest --coverage",
-    "start": "webpack-dev-server",
+    "start": "npm run storybook",
     "build": "webpack",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "prepublish": "npm run build",
+    "deploy": "gh-pages-deploy",
+    "clean-source": "rimraf build README.md src build package.json package-lock.json",
+    "gh-pages-deploy": {
+    "staticpath": "storybook-static",
+    "prep": [
+      "build-storybook"
+    ],
+    "post": [
+      "clean-source"
+    ],
+    "noprompt": false
+  }
   },
   "repository": {
     "type": "git",
@@ -26,6 +39,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^3.2.12",
     "@storybook/addon-links": "^3.2.12",
+    "@storybook/addon-options": "^3.2.12",
     "@storybook/addon-storyshots": "^3.2.12",
     "@storybook/react": "^3.2.12",
     "babel-core": "^6.26.0",
@@ -33,12 +47,13 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-env": "^1.6.0",
+    "gh-pages-deploy": "^0.4.2",
     "jest": "^21.2.1",
     "jest-babel": "^1.0.1",
+    "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1",
-    "react-dom": "^16.0.0"
+    "rimraf": "^2.6.2",
+    "webpack": "^3.6.0"
   },
   "dependencies": {
     "react": "^16.0.0"
