--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "build-storybook",
     "prepublish": "npm run build",
     "deploy": "gh-pages-deploy",
-    "_clean": "rimraf .gitignore .npmignore .storybook/ README.md package-lock.json package.json src/ webpack.config.babel.js"
+    "_clean": "rimraf .npmignore .storybook/ README.md package-lock.json package.json src/ webpack.config.babel.js"
   },
   "repository": {
     "type": "git",
