--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "webpack",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build && npm run doc",
     "deploy": "gh-pages-deploy",
+    "doc": "rdd src --readmeFile README.md",
     "_clean": "rimraf action.gif .npmignore .storybook/ README.md package-lock.json package.json src/ webpack.config.babel.js && mv iframe.html index.html"
   },
   "repository": {
@@ -40,6 +41,7 @@
     "gh-pages-deploy": "^0.4.2",
     "jest": "^21.2.1",
     "jest-babel": "^1.0.1",
+    "react-docgen-docs": "^1.0.2",
     "react-dom": "^16.0.0",
     "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.2",
